zeroj-ceremony: one-command native zip build + user-facing CLI text
- nativeImage Exec task (fatJar -> native-image from the current GraalVM JDK,
  clear error when not on GraalVM); nativeDistZip now depends on it and
  auto-detects the platform (-Pplatform overrides). Local build is now:
  ./gradlew :zeroj-ceremony:nativeDistZip
  Validated: 25s end-to-end, zip + scrubbed --help + --version green.
- CLI output scrubbed of internal references (ADR-0031, 'Option A') — help
  text now purely user-facing, pointing at docs/ceremony/USER-GUIDE.md;
  --version prints the real version via the jar manifest
  (Implementation-Version on both jars; 'dev' from classes).
- release.yml: the ceremony job is a single gradle invocation + smoke run.
- USER-GUIDE build-it-yourself updated.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>